<resources>
    <string name="creator_of_the_garbage_app" translatable="false">SPevSand</string>
    <string name="app_name">MuEmitter</string>
    <string name="to_register_fragment"><u>Don\'t have an account yet?</u></string>
    <string name="to_login_fragment"><u>Already have an account?</u></string>
    <string name="title_activity_s" translatable="false">SActivity</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="credentials_save_failed">Failed to save credentials</string>
    <string name="credentials_saved">Credentials saved</string>
    <string name="failed_to_send_resolution">Failed to send resolution</string>
    <string name="unsuccessful_credential_request">Unsuccessful credential request</string>
    <string name="credential_read_failed">Credential read failed</string>
    <string name="failed_to_sign_in_with_google_smartlock" translatable="false">"Failed to sign in with Google SmartLock"</string>
    <!-- TODO Translate the string above -->
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="fill_in_all_the_fields">Fill in all the fields</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname</string>

    <string name="downloading">Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to download the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok" translatable="false">OK</string>

    <string name="loading">Loading…</string>
    <string name="send">SEND</string>
    <string name="add_an_audio">ADD AN AUDIO</string>
    <string name="uploaded_by">Uploaded by %1$s</string>
    <string name="no_audio_is_playing">No audio is playing</string>

    <string name="audio_time_template" translatable="false">%1$s/%2$s</string>

    <string name="select_an_mp3">Select an MP3</string>

    <string name="settings">Settings</string>
    <string name="playlist">Playlist: %1$d</string>
    <string name="playlist_temp">Playlist</string>

    <string name="settings_edit_profile">Edit profile</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_change_theme">Change theme</string>
    <string name="settings_logout">Logout</string>

    <string name="logout_confirmation_dialog">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="preview">Preview</string>

    <string name="you_can_change_yours_nickname">You can change your nickname:</string>
    <string name="submit">Submit</string>

    <string name="do_you_want_to_receive_notifications">Do you want to receive notifications?</string>

    <string name="update_available">A new version is available.\nWould you like to update?</string>
    <string name="arrow_down" translatable="false">ᐯ</string>

    <string name="back_to_defaults">Back to defaults</string>

    <string name="server_broke">Sorry, an server error occurred. Sending messages is not possible.</string>
</resources>