<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/login_app_name"
        style="@style/Thintel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/app_name"
        android:textSize="100sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_edittext"
        style="@style/Thintel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="100sp"
        android:background="@drawable/frame"
        android:hint="@string/e_mail"
        android:inputType="textEmailSubject"
        android:padding="5sp"
        android:singleLine="true"
        android:textColorHint="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/login_app_name" />

    <EditText
        android:id="@+id/login_password_edittext"
        style="@style/Thintel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/frame"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5sp"
        android:singleLine="true"
        android:textColorHint="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/login_email_edittext" />

    <Button
        android:id="@+id/login_button"
        style="@style/Thintel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/frame"
        android:text="@string/login"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/login_password_edittext" />

    <TextView
        android:id="@+id/login_to_register_textview"
        style="@style/Thintel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="10sp"
        android:text="@string/to_register_fragment"
        android:textSize="40sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>