<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.spevsand.muemitter.view.ColorCustomToolbar
        android:id="@+id/activity_edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarTitle="@string/settings_edit_profile" />

    <com.spevsand.muemitter.view.ColorTextView
        android:id="@+id/activity_edit_profile_nickname_textview"
        app:layout_constraintBottom_toTopOf="@id/activity_edit_profile_edit_nickname"
        android:layout_marginHorizontal="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        style="@style/Thintel"
        android:textSize="50sp"
        android:text="@string/you_can_change_yours_nickname"
        android:gravity="center"/>

    <com.spevsand.muemitter.view.ColorEditText
        android:id="@+id/activity_edit_profile_edit_nickname"
        style="@style/Thintel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:background="@drawable/frame"
        android:textSize="50sp"
        android:layout_marginBottom="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_edit_profile_toolbar" />

    <com.spevsand.muemitter.view.ColorButton
        android:id="@+id/activity_edit_profile_submit_nickname_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/frame"
        style="@style/Thintel"
        android:text="@string/submit"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/activity_edit_profile_edit_nickname" />

</androidx.constraintlayout.widget.ConstraintLayout>