<?xml version="1.0" encoding="utf-8"?>
<com.spevsand.muemitter.view.ColorConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_logout_main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame"
    android:orientation="vertical"
    android:padding="10sp">

    <com.spevsand.muemitter.view.ColorTextView
        android:id="@+id/dialog_logout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/thintel"
        android:text="@string/logout_confirmation_dialog"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_logout_text">

        <com.spevsand.muemitter.view.ColorButton
            android:id="@+id/dialog_logout_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/frame"
            android:fontFamily="@font/thintel"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.spevsand.muemitter.view.ColorButton
            android:id="@+id/dialog_logout_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/frame"
            android:fontFamily="@font/thintel"
            android:text="@string/no"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</com.spevsand.muemitter.view.ColorConstraintLayout>