<?xml version="1.0" encoding="utf-8"?>
<com.spevsand.muemitter.view.ColorConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/updater_sheet_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame_round">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updater_sheet_app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25sp">

        <ImageView
            android:id="@+id/updater_sheet_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_circle"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.spevsand.muemitter.view.ColorTextView
            android:id="@+id/updater_sheet_old_ver"
            style="@style/Thintel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:textSize="25sp"
            app:layout_constraintLeft_toRightOf="@id/updater_sheet_app_icon"
            app:layout_constraintTop_toTopOf="@id/updater_sheet_app_icon" />

        <com.spevsand.muemitter.view.ColorTextView
            android:id="@+id/updater_sheet_ver_arrow"
            style="@style/Thintel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/arrow_down"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/updater_sheet_old_ver"
            app:layout_constraintBottom_toTopOf="@id/updater_sheet_new_ver"
            app:layout_constraintLeft_toRightOf="@id/updater_sheet_app_icon" />

        <com.spevsand.muemitter.view.ColorTextView
            android:id="@+id/updater_sheet_new_ver"
            style="@style/Thintel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="10sp"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/updater_sheet_app_icon"
            app:layout_constraintLeft_toRightOf="@id/updater_sheet_app_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.spevsand.muemitter.view.ColorTextView
        android:id="@+id/updater_sheet_text"
        style="@style/Thintel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:text="@string/update_available"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updater_sheet_app_info" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_logout_yes_no_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        app:layout_constraintTop_toBottomOf="@id/updater_sheet_text">

        <com.spevsand.muemitter.view.ColorButton
            android:id="@+id/updater_sheet_yes"
            style="@style/Thintel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:text="@string/yes"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/updater_sheet_no"
            app:layout_constraintTop_toTopOf="parent" />

        <com.spevsand.muemitter.view.ColorButton
            android:id="@+id/updater_sheet_no"
            style="@style/Thintel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:text="@string/no"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/updater_sheet_yes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="29sp"
        app:layout_constraintTop_toBottomOf="@id/dialog_logout_yes_no_layout" />

</com.spevsand.muemitter.view.ColorConstraintLayout>